tests/test_10_error_syntax.expected
Error: Syntax error at line 9: unexpected token 'int', expected 'SEMI'.
